# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//commonlibrary/ets_utils/ets_utils_config.gni")

if (is_standard_system) {
  module_output_path = "jsapi_api/napi"
}

ohos_unittest("test_convertxml_unittest") {
  module_out_path = module_output_path

  include_dirs = [
    "${ets_util_path}/js_api_module/convertxml",
    "${ets_util_path}/js_api_module/xml",
    "//third_party/bounds_checking_function/include",
    "//third_party/googletest/include",
    "//third_party/node/src",
    ets_util_path,
  ]

  configs = [ "//third_party/libxml2:libxml2_config" ]

  cflags = [ "-g3" ]

  sources = [
    "test_ark.cpp",
    "test_convertxml.cpp",
  ]

  deps = [
    "${ets_util_path}/js_api_module/convertxml:convertxml_static",
    "${ets_util_path}/js_api_module/xml:xml_static",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
    "//third_party/icu/icu4c:static_icuuc",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "ets_runtime:libark_jsruntime",
    "napi:ace_napi",
  ]

  if (is_standard_system) {
    external_deps += [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  } else {
    external_deps += [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":test_convertxml_unittest" ]
}
