# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//commonlibrary/ets_utils/ets_utils_config.gni")

if (is_standard_system) {
  module_output_path = "ets_utils/ets_utils/js_concurrent_module/taskpool"
}

ohos_unittest("test_taskpool_unittest") {
  module_out_path = module_output_path

  include_dirs = [
    js_concurrent_module_common,
    "${ets_util_path}/js_concurrent_module/taskpool",
    "//third_party/node/src",
    platform_root,
    ets_util_path,
  ]

  cflags = [ "-g3" ]

  sources = [
    "test.cpp",
    "test_ark.cpp",
    "test_taskpool.cpp",
  ]

  deps = [ "${ets_util_path}/js_concurrent_module/taskpool:taskpool_static" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ets_runtime:libark_jsruntime",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "icu:shared_icuuc",
    "libuv:uv",
    "libxml2:libxml2",
    "napi:ace_napi",
    "qos_manager:qos",
  ]

  if (is_ohos && is_standard_system && !is_arkui_x) {
    defines = [
      "ENABLE_TASKPOOL_FFRT",
      "ENABLE_TASKPOOL_HISYSEVENT",
    ]
    external_deps += [ "ffrt:libffrt" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":test_taskpool_unittest" ]
}
