# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//commonlibrary/ets_utils/ets_utils_config.gni")

if (is_standard_system) {
  module_output_path = "jsapi_api/napi"
}

ohos_unittest("test_console_unittest") {
  module_out_path = module_output_path

  include_dirs = [ "$sys_module/console" ]

  cflags = [ "-g3" ]

  sources = [
    "test_ark.cpp",
    "test_console.cpp",
  ]

  deps = [ "$sys_module/console:console" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ets_runtime:libark_jsruntime",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "icu:shared_icuuc",
    "libuv:uv",
    "napi:ace_napi",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":test_console_unittest" ]
}
